--- a/src/pages/index.jinja
+++ b/src/pages/index.jinja
@@ -4,30 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Radioguard</title>
     <link href="/dist/index.css" rel="stylesheet">
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥽</text></svg>">
-    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+    <script src="/dist/htmx.min.js"></script>
 </head>
 
 <body>
     <div class="flex flex-col w-full lg:flex-row">
-        <div class="w-full min-h-screen card bg-base-300 rounded-box">
-            <div class="flex flex-col items-center">
-                <h1>Choose a Run</h1>
-                <h2>Filters</h2>
-                <div>
-                    <input type="text" placeholder="Created At" class="input input-bordered" list="runs" />
-                    <datalist id="runs">
-                        {% for run_date_time in run_date_times %}
-                        <option>{{run_date_time}}</option>
-                        {% endfor %}
-                    </datalist>
-                </div>
-            </div>
-            <div></div>
-        </div>
+        <div class="w-full min-h-screen card bg-base-300 rounded-box prose"></div>
         <div class="divider lg:divider-horizontal"></div>
         <div class="w-full min-h-screen card bg-base-300 rounded-box">content</div>
     </div>
