--- a/src/pages/index.jinja
+++ b/src/pages/index.jinja
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <div class="flex flex-col w-full lg:flex-row">
-        <div class="w-full min-h-screen card bg-base-300 rounded-box prose"></div>
-        <div class="divider lg:divider-horizontal"></div>
-        <div class="w-full min-h-screen card bg-base-300 rounded-box">content</div>
+    <div class="flex w-full flex-row">
+        <div class="w-full min-h-screen card bg-base-300 rounded-box prose max-w-none">{{left}}</div>
+        <div class="divider divider-horizontal"></div>
+        <div class="w-full min-h-screen card bg-base-300 rounded-box prose max-w-none">{{right}}</div>
     </div>
 </body>
 
