--- a/src/components/choose_a_run.jinja
+++ b/src/components/choose_a_run.jinja
@@ -22,7 +22,7 @@
                             {% endfor %}
                         </th>
                         <th>
-                            <a href="?{{run.1}}" class="btn">
+                            <a href="{{run.1}}" class="btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round"
