--- a/src/frontend/pages/runs.jinja
+++ b/src/frontend/pages/runs.jinja
@@ -8,7 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Radioguard</title>
-    <link href="/dist/index.css" rel="stylesheet">
+    <link href="/dist/styles.css" rel="stylesheet">
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥽</text></svg>">
     <script src="/dist/htmx.min.js"></script>
