--- a/src/frontend/shared/page_wrapper.jinja
+++ b/src/frontend/shared/page_wrapper.jinja
@@ -11,6 +11,7 @@
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥽</text></svg>">
     <script src="/dist/htmx.min.js"></script>
+    <script src="/dist/_hyperscript.min.js"></script>
     {% block head %}{% endblock %}
 </head>
 
