--- a/src/frontend/pages/steps.jinja
+++ b/src/frontend/pages/steps.jinja
@@ -8,8 +8,12 @@
 <div class="w-[90vw] h-[90vh] mx-auto mt-2">
     <div class="tabs tabs-boxed justify-center">
         {% for e in list %}
-        <a href="#{{e.unique_id}}" class="tab"
-            _="on load or hashchange from window if window.location.hash is '#{{e.unique_id}}' then add .tab-active else remove .tab-active end">{{e.cta}}</a>
+        <a href="#{{e.unique_id}}" class="tab" _="
+                on load or hashchange from window
+                if window.location.hash is '#{{e.unique_id}}' or (window.location.hash is empty and I match 'a:first-child')
+                then add .tab-active
+                else remove .tab-active
+                end">{{e.cta}}</a>
         {% endfor %}
     </div>
     <div class="w-full h-full overflow-auto">
